# cn

./: .gitignore  Makefile  README.md
doc/: README-FULMINATE.md
lib/: core_to_mucore.ml
lib/bugExplanation/: replicators.ml  shapeAnalyzers.ml
lib/fulminate/: cn_to_ail.ml  cn_to_ail.mli  fulminate.ml  fulminate.mli  internal.ml  internal.mli  ownership.ml  ownership.mli  records.ml  records.mli  runtime_config.ml  runtime_config.mli  utils.ml  utils.mli
lib/fulminate/lua/: cn_lua.ml  cn_lua.mli  lua_cn_to_ail.ml  lua_fulminate.ml  lua_internal.ml  lua_internal.mli  lua_ownership.ml  lua_syntax.ml  pp_lua.ml  (+1 more)
lib/testGeneration/: testGeneration.ml
lua_gen_output/: append.exec.c  append.lua  arrow_access.exec.c  arrow_access.lua  basic_owned_example.c  basic_owned_example.exec.c  basic_owned_example.lua  canonical_example.c  canonical_example.exec.c  canonical_example.lua  enum_test.c  enum_test.exec.c  enum_test.lua
lua_handwritten_examples/forloop/: forloop_with_decl.exec.c  forloop_with_decl.lua
lua_output/append/: append_with_lua.exec.c
lua_output/arrow_access/: arrow_access.exec.c  arrow_access.lua  arrow_access_with_lua.exec.c
lua_output/bitwise-compl/: bitwise_compl.exec.c  bitwise_compl.lua  bitwise_compl_with_lua.exec.c
lua_output/division_casting/: division_casting.exec.c  division_casting.lua  division_casting_with_lua.exec.c
lua_output/enum_and_and/: enum_and_and.exec.c  enum_and_and.lua  enum_and_and_with_lua.exec.c
lua_output/forloop/: forloop_with_decl.lua  forloop_with_decl_with_lua.exec.c
lua_output/fun_ptr_extern/: fun_ptr_extern.exec.c  fun_ptr_extern.lua  fun_ptr_extern_with_lua.exec.c
runtime/lua/: dune
runtime/lua/cn/: Makefile  c_number_types.lua  dune  fast_deep_compare.lua  lua_cn_runtime_core.lua  lua_wrappers.c  lua_wrappers.h
runtime/lua/src/: dune
tests/: run-cn-exec.sh
(+7 files in other folders)
